# g15daemon

./: README.md
g15daemon/: Makefile.am
g15daemon-clients/g15macro/: Makefile.am  configure.ac  g15macro.c
g15daemon-clients/g15scriptool/: configure.ac
g15daemon-wip/: Makefile.am
g15daemon-wip/g15daemon/: Makefile.am
g15daemon-wip/plugins/: Makefile.am
g15daemon/g15daemon/: Makefile.am
